--- a/.env.example
+++ b/.env.example
@@ -1,94 +1,82 @@
-# ==========================================
-# Agent Orchestrator Environment Variables
-# ==========================================
-#
-# This file documents all environment variables needed across the monorepo.
-# Each app (daemon, web, cli) has its own .env file.
-#
-# For local development, run:
-#   1. supabase start
-#   2. supabase status  (get the keys below)
-#   3. Copy values to create .env files in each app directory
-#
-# For production/remote Supabase:
-#   - Get credentials from https://app.supabase.com/project/_/settings/api
-#
-# ==========================================
+# =============================================================================
+# Docker Environment Configuration
+# =============================================================================
+# Copy this file to .env and update with your values:
+#   cp .env.example .env
 
-# ------------------------------------------
-# Root .env (optional, used by CLI installer only)
-# Location: .env (root directory)
-# ------------------------------------------
-# SUPABASE_URL=http://127.0.0.1:54321
-# SUPABASE_ANON_KEY=your_anon_key_here
-# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
-
-
-# ------------------------------------------
-# Daemon Configuration
-# Location: apps/daemon/.env
-# ------------------------------------------
-# Supabase Configuration (required)
-# SUPABASE_URL=http://127.0.0.1:54321
-# SUPABASE_ANON_KEY=your_anon_key_here
-
-# OpenAI Configuration (optional)
-# If not set, daemon will use fallback summarization
-# OPENAI_API_KEY=sk-your_openai_api_key_here
-
-# Development Mode (optional, default: false)
-# Set to 'true' to use fallback summarization instead of OpenAI API
-# DEVELOPMENT=false
-
-# Claude Code Home Directory (optional)
-# CLAUDE_CODE_HOME=
-
-# Sync Configuration (optional)
-# PERIODIC_SYNC_INTERVAL_MS=600000
-# SESSION_LOOKBACK_DAYS=30
-
-
-# ------------------------------------------
-# Web App Configuration
-# Location: apps/web/.env.local
-# ------------------------------------------
-# These MUST be prefixed with NEXT_PUBLIC_ to be accessible in the browser
-# NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
-# NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
-
-# ==========================================
-# Setup Instructions for Coding Agents (Claude Code, Cursor, etc.)
-# ==========================================
+# =============================================================================
+# REQUIRED: Supabase Configuration
+# =============================================================================
+# You have TWO OPTIONS for Supabase setup:
 #
-# If you're an AI coding assistant setting up this project:
+# OPTION 1: Local Supabase (recommended for development)
+# -------------------------------------------------------
+# 1. Install Supabase CLI:
+#    macOS:  brew install supabase/tap/supabase
+#    Linux:  curl -fsSL https://supabase.com/install.sh | sh
 #
-# 1. Check if Supabase is running:
-#    - Run: supabase status
-#    - If not running, run: supabase start
+# 2. Start Supabase (runs full stack: Kong, GoTrue, Storage, etc.):
+#    supabase start
 #
-# 2. Get credentials from supabase status output:
-#    - Look for: "Publishable key" or "anon key" → SUPABASE_ANON_KEY
-#    - Look for: "API URL" → SUPABASE_URL
+# 3. Get your credentials:
+#    supabase status
 #
-# 3. Create environment files:
-#
-#    apps/daemon/.env:
-#    ```
-#    SUPABASE_URL=<from supabase status>
-#    SUPABASE_ANON_KEY=<from supabase status>
-#    DEVELOPMENT=true
-#    ```
-#
-#    apps/web/.env.local:
-#    ```
-#    NEXT_PUBLIC_SUPABASE_URL=<from supabase status>
-#    NEXT_PUBLIC_SUPABASE_ANON_KEY=<from supabase status>
-#    ```
-#
-# 4. The root .env is optional - only used by CLI installer
-#
-# 5. For non-interactive setup, use:
-#    pnpm install-cli:ci -- --local --skip-openai
-#
-# ==========================================
+# 4. Copy the values from "supabase status" output:
+# IMPORTANT: Use 127.0.0.1 for local Supabase (NOT host.docker.internal)
+# This is used by non-Docker services and as fallback
+SUPABASE_URL=http://127.0.0.1:54321
+SUPABASE_ANON_KEY=your-anon-key-from-supabase-status
+
+# For Docker Containers: Server-side URL (daemon and Next.js server-side code)
+# Use host.docker.internal to reach Supabase running on host machine from inside containers
+SUPABASE_SERVER_URL=http://host.docker.internal:54321
+
+# For Docker Web Container: Client-side URL (browser JavaScript)
+# Use localhost so browser can reach Supabase on host machine
+# If not set, falls back to SUPABASE_URL
+SUPABASE_CLIENT_URL=http://localhost:54321
+
+# OPTION 2: Remote Supabase (for team collaboration)
+# ---------------------------------------------------
+# 1. Create a project at https://supabase.com
+# 2. Get credentials from Project Settings → API
+# 3. Use these values (same URL for both):
+# SUPABASE_URL=https://your-project-id.supabase.co
+# SUPABASE_ANON_KEY=your-remote-anon-key
+# SUPABASE_SERVER_URL=https://your-project-id.supabase.co
+
+# =============================================================================
+# OPTIONAL: OpenAI (for AI summaries)
+# =============================================================================
+OPENAI_API_KEY=
+DEVELOPMENT=true
+
+# =============================================================================
+# OPTIONAL: Memory Service
+# =============================================================================
+SUPABASE_SERVICE_ROLE_KEY=
+ANTHROPIC_API_KEY=
+MEM0_MODE=self-hosted
+
+# =============================================================================
+# AI Assistant Data Paths (Choose your OS)
+# =============================================================================
+# macOS (default):
+CURSOR_PATH=${HOME}/Library/Application Support/Cursor
+VSCODE_PATH=${HOME}/Library/Application Support/Code
+
+# Linux (uncomment these and comment out macOS paths):
+# CURSOR_PATH=${HOME}/.config/Cursor
+# VSCODE_PATH=${HOME}/.config/Code
+
+# Common paths (all platforms):
+CLAUDE_CODE_PATH=${HOME}/.claude
+CODEX_PATH=${HOME}/.codex
+FACTORY_PATH=${HOME}/.factory
+
+# =============================================================================
+# Daemon Settings
+# =============================================================================
+PERIODIC_SYNC_INTERVAL_MS=600000
+SESSION_LOOKBACK_DAYS=30
+LOG_LEVEL=INFO
