fixed authentication link display: - before: authentication link used the docker internal service name "web" as the link's domain - after: introduced an environment variable PUBLIC_WEB_URL to indicate where webserver is actually accessible

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,14 @@ CODEX_PATH=${HOME}/.codex
 FACTORY_PATH=${HOME}/.factory
 
 # =============================================================================
+# Web Interface URL (for authentication links)
+# =============================================================================
+# The publicly accessible URL where users can reach the web interface
+# Default: http://localhost:3000 (for local development)
+# Production: Set this to your actual domain (e.g., https://app.example.com)
+PUBLIC_WEB_URL=http://localhost:3000
+
+# =============================================================================
 # Daemon Settings
 # =============================================================================
 PERIODIC_SYNC_INTERVAL_MS=600000
