--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -1,3 +1,4 @@
 
 # Web App URL (used by daemon for auth redirects)
-WEB_URL=http://localhost:3000
+# This is the publicly accessible URL where users can reach the web interface
+PUBLIC_WEB_URL=http://localhost:3000
