--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -29,10 +29,11 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@xterm/addon-fit": "^0.10.0",
+    "@xyflow/react": "^12.9.2",
     "node-pty": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xterm": "^5.3.0",
-    "@xterm/addon-fit": "^0.10.0"
+    "xterm": "^5.3.0"
   }
 }
