--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -35,6 +35,8 @@
     "@xyflow/react": "^12.9.2",
     "node-pty": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.1"
   }
 }
