--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -54,6 +54,7 @@
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.1",
     "sqlite3": "^5.1.7",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "@paper-design/shaders-react": "^0.0.70"
   }
 }
