--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -34,6 +34,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.ref_name }}
         run: |
+          # Get the first commit message headline (most descriptive)
+          FIRST_COMMIT_MSG=$(git log main..HEAD --format="%s" --reverse | head -1)
+
           # Try to extract type and description from branch name
           # Supports formats: feat/description, fix-something, feature_name
           if [[ "$BRANCH_NAME" =~ ^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)[/\-_](.+)$ ]]; then
@@ -42,8 +45,11 @@ jobs:
             # Replace dashes/underscores with spaces for readability
             DESCRIPTION=$(echo "$DESCRIPTION" | tr '-_' ' ')
             PR_TITLE="${TYPE}: ${DESCRIPTION}"
+          elif [[ -n "$FIRST_COMMIT_MSG" ]]; then
+            # Use first commit message if branch name isn't descriptive
+            PR_TITLE="$FIRST_COMMIT_MSG"
           else
-            # Fallback: use branch name as title
+            # Final fallback: use branch name as title
             PR_TITLE="$BRANCH_NAME"
           fi
 
