--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "@electron/rebuild": "^3.7.1",
-    "electron-builder": "^26.4.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -31,6 +30,8 @@
     "@vitest/coverage-v8": "^4.0.17",
     "concurrently": "^8.2.2",
     "electron": "^39.0.0",
+    "electron-builder": "^26.4.0",
+    "husky": "^9.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
@@ -44,6 +45,7 @@
     "@ai-sdk/google": "^2.0.26",
     "@ai-sdk/openai": "^2.0.59",
     "@anthropic-ai/claude-agent-sdk": "^0.2.7",
+    "@paper-design/shaders-react": "^0.0.70",
     "@types/sqlite3": "^3.1.11",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-webgl": "^0.18.0",
@@ -58,7 +60,6 @@
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.1",
     "sqlite3": "^5.1.7",
-    "zod": "^4.3.5",
-    "@paper-design/shaders-react": "^0.0.70"
+    "zod": "^4.3.5"
   }
 }
